--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/azathoth-nyarlathotep.github.io"
+baseurl: ""
 
 backgroud_animation: true
 
